@@ -85,6 +85,7 @@
 - [#788] Unhardcode icon path in GNU/Linux launcher.
 - [#797] Custom seam allowance ignored in some cases.
 - [#798] Formula Wizard crashes with translated increments.
+- [#803] Bug in FancyTabBar widget. Wrongly calculated widget width.
 
 # Version 0.5.0 May 9, 2017
 - [#581] User can now filter input lists by keyword in function wizard.
